force-app/main/default/objects/Opportunity/fields/Contract_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Contract_Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Deployment</label>
    <type>Checkbox</type>
</CustomField>