force-app/main/default/objects/Opportunity/fields/Contract_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_Formula__c</fullName>
    <formula>If( ISNULL(Commencement_Date__c),
ADDMONTHS( DATE(YEAR(ADDMONTHS(Installation_Date__c,1)),MONTH(ADDMONTHS(Installation_Date__c,1)),01) ,Term_of_Agreement_in_Months_Number__c), ADDMONTHS( Commencement_Date__c ,  Term_of_Agreement_in_Months_Number__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>