force-app/main/default/objects/Opportunity/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>