force-app/main/default/objects/Opportunity/fields/Contract_is_Executed__c.field-meta.xml
<CustomField>
    <fullName>Contract_is_Executed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract is Executed</label>
    <type>Date</type>
</CustomField>