force-app/main/default/objects/Opportunity/fields/Conversion_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Bonus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversion Bonus</label>
    <type>Checkbox</type>
</CustomField>