force-app/main/default/objects/Opportunity/fields/Conversion_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Sale_Amount__c</fullName>
    <description>This is something the surgical team is doing to help the reps track which opps are generating their bonus</description>
    <label>Conversion Sale Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>