force-app/main/default/objects/Opportunity/fields/Corporate_Pricing_Director__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Pricing_Director__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Corporate Pricing Director</label>
    <type>TextArea</type>
</CustomField>