force-app/main/default/objects/Opportunity/fields/Counter_Offers__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Counter Offers</label>
    <type>Checkbox</type>
</CustomField>