force-app/main/default/objects/Opportunity/fields/Credit_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approved__c</fullName>
    <label>Credit Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK - Full approval</fullName>
            </value>
            <value>
                <fullName>OK - Lease/Placement</fullName>
            </value>
            <value>
                <fullName>OK - Need Compliance Review</fullName>
            </value>
            <value>
                <fullName>NEED ATTENTION</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>