force-app/main/default/objects/Opportunity/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Credit Check with Warsaw Finance Service Manager (John Kahlow)  574-373-3795</inlineHelpText>
    <label>Credit Check</label>
    <type>Checkbox</type>
</CustomField>