force-app/main/default/objects/Opportunity/fields/Credit_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Review Date</label>
    <type>Date</type>
</CustomField>