force-app/main/default/objects/Opportunity/fields/Cross_Sell_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>