force-app/main/default/objects/Opportunity/fields/CTC_120_Hoses_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>CTC_120_Hoses_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTC 120&quot; Hoses Confirmed</label>
    <type>Checkbox</type>
</CustomField>