force-app/main/default/objects/Opportunity/fields/Curr_Rev_by_Stage__c.field-meta.xml
<CustomField>
    <fullName>Curr_Rev_by_Stage__c</fullName>
    <description>This is used by the sports med team for forecasting growth.</description>
    <formula>CY_Est_Revenue__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Curr Rev by Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>