force-app/main/default/objects/Opportunity/fields/Current_Month_Target__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Month Target</label>
    <type>Checkbox</type>
</CustomField>