force-app/main/default/objects/Opportunity/fields/Customer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Contact Email</label>
    <type>Email</type>
</CustomField>