force-app/main/default/objects/Opportunity/fields/Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Contact Name</label>
    <type>TextArea</type>
</CustomField>