force-app/main/default/objects/Opportunity/fields/Customer_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Contact Phone #</label>
    <type>Phone</type>
</CustomField>