force-app/main/default/objects/Opportunity/fields/Customer_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Customer_Incentive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Incentive</label>
    <type>TextArea</type>
</CustomField>