force-app/main/default/objects/Opportunity/fields/CY__c.field-meta.xml
<CustomField>
    <fullName>CY__c</fullName>
    <label>CY Sales Growth</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>