force-app/main/default/objects/Opportunity/fields/CY_Est_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CY_Est_Revenue__c</fullName>
    <description>This will tell you the expected revenue from an opportunity based on the close date and the days between the end of the close date&apos;s year. For example if close date is 03/01/2020 and the amount is 120,000, the formula calculates days between 03/01/2020 to the end of the year (12/31/2020) . The value is 305 days . The formula will then take the percent of (3005/365) * amount and you get $100,274. That is an estimate of how much potential revenue you should expect to see from this opportunity based on the year of the close date.</description>
    <formula>IF(YEAR(CloseDate) = YEAR(TODAY()), ((DATE(YEAR(CloseDate),12,31) - CloseDate) / 365) * Amount , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Est Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>