force-app/main/default/objects/Opportunity/fields/Date_of_Last_Ownership_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Ownership_Change__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Last Ownership Change</label>
    <type>Date</type>
</CustomField>