force-app/main/default/objects/Opportunity/fields/Date_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Date_Overridden__c</fullName>
    <description>date Opp Stage was Overriden</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Overridden</label>
    <type>Date</type>
</CustomField>