force-app/main/default/objects/Opportunity/fields/Date_Validated__c.field-meta.xml
<CustomField>
    <fullName>Date_Validated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Validated</label>
    <type>DateTime</type>
</CustomField>