force-app/main/default/objects/Opportunity/fields/DaystoCloseDate__c.field-meta.xml
<CustomField>
    <fullName>DaystoCloseDate__c</fullName>
    <description>Number of Days from today to Close date</description>
    <formula>CloseDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaystoCloseDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>