force-app/main/default/objects/Opportunity/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DBA</label>
    <type>TextArea</type>
</CustomField>