force-app/main/default/objects/Opportunity/fields/Deal_Approved__c.field-meta.xml
<CustomField>
    <fullName>Deal_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Approved</label>
    <type>Checkbox</type>
</CustomField>