force-app/main/default/objects/Opportunity/fields/Deal_Desk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Desk Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>