force-app/main/default/objects/Opportunity/fields/Deal_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Deal_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Received</label>
    <type>Checkbox</type>
</CustomField>