force-app/main/default/objects/Opportunity/fields/Deal_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Deal_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Submitted</label>
    <type>Checkbox</type>
</CustomField>