force-app/main/default/objects/Opportunity/fields/Deal_Summary__c.field-meta.xml
<CustomField>
    <fullName>Deal_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>