force-app/main/default/objects/Opportunity/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <description>This field is used for the Dental Opportunity Type record.</description>
    <inlineHelpText>Picklist definitions: Select one IF:
Acquire Implant: &amp; Expand Implant: &amp; Expand Implant: ≤ 5 units in last 12 months
Acquire Regen: &amp; Acquire Rest/Digital: &amp; Expand Regen: $0 in last 12 months
Retain Implant: foundational implant revenue,routine order</inlineHelpText>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retain</fullName>
            </value>
            <value>
                <fullName>Acquire DSUVIA</fullName>
            </value>
            <value>
                <fullName>Acquire Guided</fullName>
            </value>
            <value>
                <fullName>Acquire Implant</fullName>
            </value>
            <value>
                <fullName>Acquire Regen</fullName>
            </value>
            <value>
                <fullName>Acquire Rest/Digital</fullName>
            </value>
            <value>
                <fullName>Acquire Other</fullName>
            </value>
            <value>
                <fullName>Expand Implant</fullName>
            </value>
            <value>
                <fullName>Exception Implant Run Rate</fullName>
            </value>
            <value>
                <fullName>Expand Regen</fullName>
            </value>
            <value>
                <fullName>Expand Rest/Digital</fullName>
            </value>
            <value>
                <fullName>Exception Regen Run Rate</fullName>
            </value>
            <value>
                <fullName>Exception Rest/Digital Run Rate</fullName>
            </value>
            <value>
                <fullName>Expand – Other</fullName>
            </value>
            <value>
                <fullName>Regen Share Gain</fullName>
            </value>
            <value>
                <fullName>Bulk Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>