force-app/main/default/objects/Opportunity/fields/Deal_Type_Surgical__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type_Surgical__c</fullName>
    <label>Purchase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cash from Placement</fullName>
            </value>
            <value>
                <fullName>Consign - Bill Only</fullName>
            </value>
            <value>
                <fullName>DRA</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Lease from Placement</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>PPU (Pay-per-Use)</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>ROSA+</fullName>
            </value>
            <value>
                <fullName>ROSA+ from Placement</fullName>
            </value>
            <value>
                <fullName>ROSA ID</fullName>
            </value>
            <value>
                <fullName>ROSA ID from Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>