force-app/main/default/objects/Opportunity/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Note</label>
    <type>Checkbox</type>
</CustomField>