force-app/main/default/objects/Opportunity/fields/Demand_Review__c.field-meta.xml
<CustomField>
    <fullName>Demand_Review__c</fullName>
    <label>Demand Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>