force-app/main/default/objects/Opportunity/fields/Determine_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Determine_Service_Package__c</fullName>
    <label>Determine Service Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>