force-app/main/default/objects/Opportunity/fields/Distributor_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Distributor_RecordType__c</fullName>
    <formula>Primary_Sales_Associate__r.Account.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor RecordType</label>
    <type>Text</type>
</CustomField>