force-app/main/default/objects/Opportunity/fields/Distributor_Territory__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Territory__c</fullName>
    <formula>Primary_Sales_Associate__r.Account.Territory_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Territory</label>
    <type>Text</type>
</CustomField>