force-app/main/default/objects/Opportunity/fields/Documents_Requested__c.field-meta.xml
<CustomField>
    <fullName>Documents_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Requested</label>
    <type>Checkbox</type>
</CustomField>