force-app/main/default/objects/Opportunity/fields/Dollars_Left_on_the_Table__c.field-meta.xml
<CustomField>
    <fullName>Dollars_Left_on_the_Table__c</fullName>
    <label>Dollars Left on the Table</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>