force-app/main/default/objects/Opportunity/fields/Dollars_left_on_the_table_New__c.field-meta.xml
<CustomField>
    <fullName>Dollars_left_on_the_table_New__c</fullName>
    <description>Formula field to calculate the Dollars left on the table</description>
    <formula>Full_Capital_Target__c  -  Capital_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dollars Left on the Table (Not in use)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>