force-app/main/default/objects/Opportunity/fields/DRA_Accelero__c.field-meta.xml
<CustomField>
    <fullName>DRA_Accelero__c</fullName>
    <label>DRA-Accelero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>