force-app/main/default/objects/Opportunity/fields/DRA_Request__c.field-meta.xml
<CustomField>
    <fullName>DRA_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DRA Request</label>
    <type>Checkbox</type>
</CustomField>