force-app/main/default/objects/Opportunity/fields/Drive_Defend__c.field-meta.xml
<CustomField>
    <fullName>Drive_Defend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drive &amp; Defend</label>
    <type>Checkbox</type>
</CustomField>