force-app/main/default/objects/Opportunity/fields/Drive_to_92__c.field-meta.xml
<CustomField>
    <fullName>Drive_to_92__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for the US Ortho team and is part of initiative to focus on two targets/opportunities per territory</description>
    <label>Drive to 92</label>
    <type>Checkbox</type>
</CustomField>