force-app/main/default/objects/Opportunity/fields/Dual_Vendor_RFP__c.field-meta.xml
<CustomField>
    <fullName>Dual_Vendor_RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual Vendor RFP</label>
    <type>Checkbox</type>
</CustomField>