force-app/main/default/objects/Opportunity/fields/Economic_Champion__c.field-meta.xml
<CustomField>
    <fullName>Economic_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Economic Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Economic Champion)</relationshipLabel>
    <relationshipName>OpportunitieswPxt</relationshipName>
    <type>Lookup</type>
</CustomField>