force-app/main/default/objects/Opportunity/fields/Economic_Champion_Web_Address__c.field-meta.xml
<CustomField>
    <fullName>Economic_Champion_Web_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Economic Champion Web Address</label>
    <type>Url</type>
</CustomField>