force-app/main/default/objects/Opportunity/fields/Ecosystem_of_Solutions_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Ecosystem_of_Solutions_Opportunities__c</fullName>
    <label>Ecosystem of Solutions Opportunities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelero</fullName>
            </value>
            <value>
                <fullName>mymobility</fullName>
            </value>
            <value>
                <fullName>ROSA</fullName>
            </value>
            <value>
                <fullName>Efficient Care</fullName>
            </value>
            <value>
                <fullName>OneBill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>