force-app/main/default/objects/Opportunity/fields/Electronic_signature_email__c.field-meta.xml
<CustomField>
    <fullName>Electronic_signature_email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Electronic signature email</label>
    <type>Email</type>
</CustomField>