force-app/main/default/objects/Opportunity/fields/Electronic_signature_Name__c.field-meta.xml
<CustomField>
    <fullName>Electronic_signature_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Electronic Signature Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>