force-app/main/default/objects/Opportunity/fields/Enterprise_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Alignment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enterprise Alignment</label>
    <length>175</length>
    <type>Text</type>
</CustomField>