force-app/main/default/objects/Opportunity/fields/Equipment_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Competitors__c</fullName>
    <description>MIS</description>
    <label>Equipment Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Storz</fullName>
            </value>
            <value>
                <fullName>Arthrex</fullName>
            </value>
            <value>
                <fullName>Smith &amp; Nephew</fullName>
            </value>
            <value>
                <fullName>Steris</fullName>
            </value>
            <value>
                <fullName>Skytron</fullName>
            </value>
            <value>
                <fullName>Trumpf</fullName>
            </value>
            <value>
                <fullName>Olympus</fullName>
            </value>
            <value>
                <fullName>Conmed</fullName>
            </value>
            <value>
                <fullName>Gettinge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>