force-app/main/default/objects/Opportunity/fields/Est_Months_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Est_Months_Allocated__c</fullName>
    <label>Est. Months Allocated</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>