force-app/main/default/objects/Opportunity/fields/Estimated_Annual_Cases_Persona_fill_in__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Cases_Persona_fill_in__c</fullName>
    <label>Estimated Annual Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>