force-app/main/default/objects/Opportunity/fields/Estimated_Contract_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Contract_Close_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Estimated time of contract close (Q/Yr):</inlineHelpText>
    <label>Estimated Contract Close Time</label>
    <type>Date</type>
</CustomField>