force-app/main/default/objects/Opportunity/fields/Estimated_Current_Electrical_Stimulati__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Current_Electrical_Stimulati__c</fullName>
    <label>Estimated Current Electrical Stimulati</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 5 stims/month</fullName>
            </value>
            <value>
                <fullName>5-10 stims/month</fullName>
            </value>
            <value>
                <fullName>10-15 stims/month</fullName>
            </value>
            <value>
                <fullName>15+ stims/month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>