force-app/main/default/objects/Opportunity/fields/Estimated_opening_month_year__c.field-meta.xml
<CustomField>
    <fullName>Estimated_opening_month_year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated opening (month/year)</label>
    <type>Date</type>
</CustomField>