force-app/main/default/objects/Opportunity/fields/Estimated_Pull_Through_Rev_Full_Term__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Pull_Through_Rev_Full_Term__c</fullName>
    <label>Estimated Pull Through Rev (Full Term)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>