force-app/main/default/objects/Opportunity/fields/Estimated_Pull_Through_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Pull_Through_Year_1__c</fullName>
    <label>Estimated Pull Through Year 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>