force-app/main/default/objects/Opportunity/fields/Estimated_Recon_Revenue_TTM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Recon_Revenue_TTM__c</fullName>
    <label>Estimated Recon Revenue (TTM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>