force-app/main/default/objects/Opportunity/fields/Estimated_Surgical_Revenue_TTM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Surgical_Revenue_TTM__c</fullName>
    <label>Estimated Surgical Revenue (TTM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>