force-app/main/default/objects/Opportunity/fields/Estimated_Zimmer_Spend_TTM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Zimmer_Spend_TTM__c</fullName>
    <label>Estimated Zimmer Spend (TTM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>