force-app/main/default/objects/Opportunity/fields/Eval_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Eval_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eval End Date</label>
    <type>Date</type>
</CustomField>