force-app/main/default/objects/Opportunity/fields/Eval_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Eval_Order_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eval Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>