force-app/main/default/objects/Opportunity/fields/Eval_Product_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Eval_Product_Ship_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eval Product Ship Date</label>
    <type>Date</type>
</CustomField>