force-app/main/default/objects/Opportunity/fields/Eval_Product_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Eval_Product_Shipped__c</fullName>
    <label>Eval Product Shipped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Capital – Compression Therapy</fullName>
            </value>
            <value>
                <fullName>Capital – Fluid Waste Management</fullName>
            </value>
            <value>
                <fullName>Capital - MCS</fullName>
            </value>
            <value>
                <fullName>Capital – Power</fullName>
            </value>
            <value>
                <fullName>Capital – Skin Grafting</fullName>
            </value>
            <value>
                <fullName>Capital – Total Shield</fullName>
            </value>
            <value>
                <fullName>Capital – Tourniquets</fullName>
            </value>
            <value>
                <fullName>Capital – Traction</fullName>
            </value>
            <value>
                <fullName>Capital – Video Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>