force-app/main/default/objects/Opportunity/fields/Eval_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Eval_Tracking_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eval Tracking Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>