force-app/main/default/objects/Opportunity/fields/Evaluation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Complete__c</fullName>
    <label>Evaluation Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>