force-app/main/default/objects/Opportunity/fields/Evaluation_Performed__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Performed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluation Performed</label>
    <type>Checkbox</type>
</CustomField>